--- a/loans-prod.properties
+++ b/loans-prod.properties
@@ -1,10 +1,10 @@
-loans.msg =Welcome to the EazyBank Loans Prod application
+loans.msg =Welcome to the Pretty Tony Loans Prod application
 loans.build-version=1
 
-loans.mailDetails.hostName=prod-loans@eazybytes.com
+loans.mailDetails.hostName=prod-loans@pt.com
 loans.mailDetails.port=9011
-loans.mailDetails.from=prod-loans@eazybytes.com
-loans.mailDetails.subject=Your Loan Details from Eazy Bank Production Environment
+loans.mailDetails.from=prod-loans@pt.com
+loans.mailDetails.subject=Your Loan Details from Pretty Tony Bank Production Environment
 
 loans.activeBranches[0]=Hyderabad
 loans.activeBranches[1]=Paris
